# radarjud

./: .gitignore  tenant.md
.claude/: settings.json
demo-video/: .gitignore  package-lock.json  package.json  tsconfig.json
demo-video/src/: Root.tsx
demo-video/src/scenes/: AlertasScene.tsx  BuscaSemanticaScene.tsx  DashboardScene.tsx  IntroScene.tsx  MonitoradosScene.tsx  OportunidadesScene.tsx  OutroScene.tsx  ParametrizacaoScene.tsx  ProblemScene.tsx
dje-monitor/: .env.example  APRESENTACAO_SISTEMA.md  Dockerfile  Plano_melhoria_oportunidade.md  auth.md  docker-compose.prod.yml  docker-compose.yml  fonte.md  main.js  oportunidades_credito.md  plano_busca.md  plano_vetor.md  project.md  requirements.txt  setup_local.sh  test_ssl.py
dje-monitor/scripts/: backfill_embeddings.py  create_owner.py  eval_semantic.py  migrate_to_tenant_armando.py
dje-monitor/scripts/migrations/: 001_add_tenant_id.sql  (+14 more)
dje-monitor/src/: api.py  cli_import.py  config.py  main.py  tasks.py
dje-monitor/tests/: conftest.py  test_config.py  test_cpf_matcher.py  test_embedding_service.py  test_storage.py
dje-monitor/web/: Dockerfile  index.html  nginx.conf  nginx.dev.conf  package-lock.json  package.json  vite.config.ts
dje-search-client/: pyproject.toml
dje-search-client/dje_search/: __init__.py  client.py  models.py  utils.py
docs/: CHANGELOG_RECENTE.md  SEGURANCA_E_PRIVACIDADE.md  SETUP_LOCAL.md  apresentacao-comercial-radarjud.md  formato_planilha.md  plano_oportunidades_v2.md  plano_parametrizacao.md  plano_worker.md
scripts/: test_api.py  test_comunica.py
(+62 files in other folders)
