[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dje-search-client"
version = "0.1.0"
description = "Cliente reutilizável para a API de busca do DJEN (Diário da Justiça Eletrônico Nacional)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dje_search*"]
